# chokoengine2

./: .gitignore  .gitmodules  CMakeLists.txt  cpp.hint  githash.bat  githash.h
editor/: CMakeLists.txt  chokoeditor.cpp  chokoeditor.hpp  editor_defines.hpp  editor_includes.hpp  editor_paths.cpp  editor_paths.hpp  main.cpp
editor/asset/: CMakeLists.txt  asset_list.cpp  asset_list.hpp  asset_loader.cpp  asset_loader.hpp  asset_manager.cpp  asset_manager.hpp  asset_writer.cpp  asset_writer.hpp  prefab.cpp  prefab.hpp  prefab_manager.cpp  prefab_manager.hpp
editor/asset/archiver/: CMakeLists.txt  asset_archiver.cpp  asset_archiver.hpp  deflate.cpp  deflate.hpp  getdeps.hpp
editor/asset/enums/: asset_type.hpp  export_type.hpp  other_type.hpp
editor/asset/ext/: CMakeLists.txt  visual_shader.hpp  vshader_node.cpp  vshader_node.hpp
editor/asset/ops/: CMakeLists.txt  asset_ops.cpp  asset_ops.hpp
editor/asset/writer/: CMakeLists.txt  animclip.cpp  animgraph.cpp  armature.cpp  background.cpp  material.cpp  mesh.cpp  prefab.cpp  shader.cpp  texture.cpp
editor/builder/: CMakeLists.txt  builder.cpp  builder.hpp
editor/effects/: highlight.hpp
editor/exporters/: CMakeLists.txt  blender.cpp  blender.hpp
editor/ext/: CMakeLists.txt  traits_ext.hpp  ui_ext.cpp  ui_ext.hpp  ui_ext_debug.cpp  ui_ext_debug.hpp  ui_ext_editor.cpp  ui_ext_editor.hpp  ui_ext_layout.cpp  ui_ext_layout.hpp  ui_ext_layout.inl
editor/glsl/: arm_bone.h  colorpicker_h.h  colorpicker_sv.h  outlineFrag.h  padTextureFrag.h  surfaceBlurFrag.h  surfaceBlurFrag2.h  surfaceBlurFrag_sss.h  surfaceConvFrag.h  surfaceEdgeDet.h  uvinfo.h  uvinfo_exp.h  uvjmpgen.h  uvjmpgen2.h  wcol.h
editor/hooks/: CMakeLists.txt  callback.cpp  callback.hpp  callback_args.cpp  callback_args.hpp  callback_caller.cpp  callback_caller.hpp  callback_list.hpp  callback_list_str.hpp  callback_manager.cpp  callback_manager.hpp  callback_sig_args.hpp
editor/json/comp/: Camera.json
editor/player/: CMakeLists.txt  debugger.hpp  player.cpp  player.hpp
editor/prefs/: CMakeLists.txt  colors.cpp  colors.hpp  input.cpp  input.hpp  keymap.hpp  preferences.cpp  preferences.hpp
editor/preview/: CMakeLists.txt  preview.hpp
editor/preview/asset/: CMakeLists.txt  ep_material.cpp
editor/res/: CMakeLists.txt  icons.cpp  icons.hpp  images.cpp  images.hpp
editor/scene/: CMakeLists.txt  sceneinfo.cpp  sceneinfo.hpp  sceneinfo.inl  scenemanager.cpp  scenemanager.hpp
editor/scene/ops/: CMakeLists.txt  scene_ops.cpp  scene_ops.hpp
editor/scripting/: CMakeLists.txt  loader_generator.cpp  loader_generator.hpp  script_info.hpp  script_newtype.hpp  script_type_ext.hpp  script_val.cpp  script_val.hpp  script_val_class.hpp  script_var.hpp  scripting.cpp  scripting.hpp  strs_asset.hpp  strs_comp.hpp
editor/scripting/comp/: CMakeLists.txt  script_dummy.cpp  script_dummy.hpp  script_dummy_loader.cpp  script_dummy_loader.hpp
editor/serial/: CMakeLists.txt  serial_objectref.cpp  serial_objectref.hpp  serialized_component.cpp  serialized_component.hpp  serialized_entry.hpp  serialized_item.cpp  serialized_item.hpp  serialized_item.inl  serialized_object.cpp  serialized_object.hpp  serialized_prefab.cpp  serialized_prefab.hpp  serialized_prefab_ext.cpp  serialized_prefab_ext.hpp  serializer.cpp  serializer.hpp
editor/serial/comp/: CMakeLists.txt  es_animator.cpp  (+4 more)
editor/specs/: callbacks.txt  project structure.txt
editor/src/: chokoeditor.hpp  editor_defines.hpp  main.cpp
editor/status/: status.cpp  status.hpp
editor/taskrunners/: tasklist.hpp
editor/ui/: CMakeLists.txt  colors.cpp  colors.hpp  dragdrop.cpp  dragdrop.hpp  dropdown_menu.cpp  dropdown_menu.hpp  ew_macros.hpp  ew_macros_dropdown.hpp  ew_macros_selref.hpp  overlay.cpp  overlay.hpp  overlaymanager.cpp  overlaymanager.hpp  window.cpp  window.hpp  windowmanager.cpp  windowmanager.hpp
editor/utils/: CMakeLists.txt  debug2.cpp  debug2.hpp  glutils.cpp  glutils.hpp  jsonutils.hpp  meshutils.cpp  meshutils.hpp
examples/hello_world/: CMakeLists.txt  main.cpp
examples/rotating_cube/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  chokoengine.cpp  chokoengine_common.hpp  chokolait.cpp  chokoplayer.cpp  chokoplayer_inc.hpp  module_aa_inc.hpp  module_ae_inc.hpp  precompile.h
src/_pins/: add_new_comp.cpp
src/asset/: CMakeLists.txt  animclip.cpp  animgraph.cpp  armature.cpp  armature_bone.cpp  asset.cpp  background.cpp  cubemap.cpp  font.cpp  material.cpp  mesh.cpp  prefab.cpp  prefab_manager.cpp  rendertarget.cpp  rendertarget3.cpp  shader.cpp  texture.cpp  texture3.cpp  texture_internal.cpp  texture_internal.hpp
src/backend/: CMakeLists.txt  chokoengine_backend.hpp
src/compute/: shape_tf.h  skin_tf_mat.h
src/core/: CMakeLists.txt  debug.cpp  display.cpp  input.cpp  interactive_ui.cpp  io.cpp  mvp.cpp  time.cpp  ui.cpp  world_ui.cpp
src/ext/: CMakeLists.txt  glmext.hpp  refcnt.cpp  strext.cpp
src/glsl/: blurFrag.h  dofFrag.h  fogFrag.h  font.h  fxaaFrag.h  glowFrag.h  glowFrag2.h  minVert.h  particleout_tf.h  particlesys_tf.h  pointLightFrag.h  pointLightFrag_s.h  presum_ggx.h  presum_ggx_cube.h  probeLightFrag.h  skyFrag.h  spotLightFrag.h  ssaoFrag.h  ssaoFrag2.h  transoverlayfrag.h  uiColFrag.h  uiColVert.h  uiTexFrag.h  uiTexVert.h  uiVert.h  voxelDebug.h  voxelFill.h
src/parsers/: CMakeLists.txt  json.cpp  mesh.cpp
src/physics/: CMakeLists.txt  physics.cpp
src/player/: CMakeLists.txt
src/scene/: CMakeLists.txt  component.cpp  object_base.cpp  scene.cpp  scene_object.cpp  sceneobject.cpp  transform.cpp
src/types/: CMakeLists.txt  color.cpp  crvalue.cpp  cube_framebuffer.cpp  data_stream.cpp  depth_cubemap.cpp  depth_texture.cpp  fcurve.cpp  framebuffer.cpp  gradient.cpp  int2.cpp  int3.cpp  int4.cpp  mat3x3.cpp  mat4x4.cpp  quat.cpp  rect.cpp  texturebuffer.cpp  vec2.cpp  vec3.cpp  vec4.cpp  vertexarray.cpp  vertexbuffer.cpp  vertexobject.cpp
src/utils/: CMakeLists.txt  cursor.cpp  glutils.cpp  glutils.hpp  math.cpp  procedural_mesh.cpp  random.cpp  strext.cpp  subprocess.cpp  transform_feedback.cpp  unique_caller.cpp
src/winonly/: minimalwin.h
(+586 files in other folders)
